--- a/project/package.json
+++ b/project/package.json
@@ -21,6 +21,8 @@
         "vue-template-compiler": "^2.5.21"
     },
     "dependencies": {
+        "laravel-echo": "^1.5.2",
+        "pusher-js": "^4.3.1",
         "vue-spinner": "^1.0.3"
     }
 }
